src/Message/Message_ProgressSentry.hxx
@@ -38,6 +38,9 @@ public:
     }
   }
 
+  //! Method Relieve() was replaced by Close() in Message_ProgressScope
+  void Relieve () { Close(); }
+
 private:
   //! Message_ProgressRange should be passed to constructor instead of Message_ProgressIndicator.
   Message_ProgressSentry (const Handle(Message_ProgressIndicator)& theProgress,
